# cosmetics-scraping

./: .gitignore  DESIGN.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-19-musinsa-standalone-fetcher.md
docs/superpowers/specs/: 2026-04-19-musinsa-standalone-fetcher-design.md
scripts/: b2_load_brand_aliases.py  backfill_hwahae_prices.py  brand_map_hwahae.py  cross_analysis.py  cross_hidden_gems.py  export_master_csv.py  hwahae_brand_lookup.py  hwahae_brand_lookup_full.py  match_poc.py  p1_product_matching.py  recon_hwahae.py  recon_hwahae_detail.py  recon_hwahae_search.py
src/: config.py  enricher.py  hwahae_effects.py  hwahae_fetcher.py  hwahae_ingredients.py  main.py  models.py  musinsa_fetcher.py  parsers.py  report.py  spider.py  storage.py
tests/: test_hwahae_fetcher.py  test_musinsa_fetcher.py  test_parsers.py  test_spider.py  test_storage.py  test_validate_live.py
