[project]
name = "beauty-ranking-crawler"
version = "0.1.0"
description = "올리브영/무신사 뷰티 제품 랭킹 수집기"
requires-python = ">=3.10"
dependencies = [
    "scrapling>=0.4",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "uvloop; sys_platform != 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
